--- a/sigproc.bib
+++ b/sigproc.bib
@@ -1,59 +1,76 @@
-@ARTICLE{bowman:reasoning,
-	AUTHOR = "Mic Bowman and Saumya K. Debray and Larry L. Peterson",
-	TITLE = "Reasoning About Naming Systems",
-	JOURNAL = "ACM Trans. Program. Lang. Syst.",
-	VOLUME = {15},
-	NUMBER = {5},
-	PAGES = {795-825},
-	MONTH = "November",
-	YEAR = {1993}	}
-
-@ARTICLE{braams:babel,
-	AUTHOR = "Johannes Braams",
-	TITLE = "Babel, a Multilingual Style-Option System for Use with LaTeX's Standard Document Styles",
-	JOURNAL = {TUGboat},
-	VOLUME = {12},
-	NUMBER = {2},
-	PAGES = {291-301},
-	MONTH = "June",
-	YEAR = {1991}	}
-
-@INPROCEEDINGS{clark:pct,
-	AUTHOR = "Malcolm Clark",
-	TITLE = "Post Congress Tristesse",
-	BOOKTITLE = "TeX90 Conference Proceedings",
-	PAGES = "84-89",
-	ORGANIZATION = "TeX Users Group",
-	MONTH = "March", 
-	YEAR = {1991}	}
-
-@ARTICLE{herlihy:methodology,
-	AUTHOR = "Maurice Herlihy",
-	TITLE = "A Methodology for Implementing Highly Concurrent
-	Data Objects",
-	JOURNAL = {ACM Trans. Program. Lang. Syst.},
-	VOLUME = {15},
-	NUMBER = {5},
-	PAGES = {745-770},
-	MONTH = "November",
-	YEAR = {1993}	}
-
-@BOOK{Lamport:LaTeX,
-	AUTHOR = "Leslie Lamport",
-	TITLE = "LaTeX User's Guide and Document Reference Manual",
-	PUBLISHER = "Addison-Wesley Publishing Company",
-	ADDRESS = "Reading, Massachusetts",
-	YEAR = "1986"	}
-
-@BOOK{salas:calculus,
-	AUTHOR = "S.L. Salas and Einar Hille",
-	TITLE = "Calculus: One and Several Variable",
-	PUBLISHER = "John Wiley and Sons",
-	ADDRESS = "New York",
-	YEAR = "1978"	}
-
-
-
-
-
-
+@inproceedings{Hadoop,
+title={http://hadoop.apache.org/},
+}
+@inproceedings{zaharia2010spark,
+ author = {Zaharia, Matei and Chowdhury, Mosharaf and Franklin, Michael J. and Shenker, Scott and Stoica, Ion},
+ title = {Spark: Cluster Computing with Working Sets},
+ booktitle = {Proceedings of the 2Nd USENIX Conference on Hot Topics in Cloud Computing},
+ series = {HotCloud'10},
+ year = {2010},
+ location = {Boston, MA},
+ pages = {10--10},
+ numpages = {1},
+ url = {http://dl.acm.org/citation.cfm?id=1863103.1863113},
+ acmid = {1863113},
+ publisher = {USENIX Association},
+ address = {Berkeley, CA, USA},
+} 
+@inproceedings{Spark,
+title={http://spark.apache.org/},
+}
+@inproceedings{SparkMLLib,
+ title = {http://spark.apache.org/mllib/},
+ }
+@inproceedings{Mahout,
+ title = {https://mahout.apache.org/},
+ }
+@article{dean2004mapreduce,
+title={MapReduce: simplified data processing on large clusters},
+author={Dean, Jeffrey and Ghemawat, Sanjay},
+journal={Operating Systems Design and Implementation},
+year={2004}}
+@article{dean2010mapreduce,
+title={MapReduce: a flexible data processing tool},
+author={Dean, Jeffrey and Ghemawat, Sanjay},
+journal={Communications of The ACM},
+volume={53},
+number={1},
+pages={72--77},
+year={2010}}
+@inproceedings{islam2012oozie,
+ author = {Islam, Mohammad and Huang, Angelo K. and Battisha, Mohamed and Chiang, Michelle and Srinivasan, Santhosh and Peters, Craig and Neumann, Andreas and Abdelnur, Alejandro},
+ title = {Oozie: Towards a Scalable Workflow Management System for Hadoop},
+ booktitle = {Proceedings of the 1st ACM SIGMOD Workshop on Scalable Workflow Execution Engines and Technologies},
+ series = {SWEET '12},
+ year = {2012},
+ isbn = {978-1-4503-1876-1},
+ location = {Scottsdale, Arizona, USA},
+ pages = {4:1--4:10},
+ articleno = {4},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/2443416.2443420},
+ doi = {10.1145/2443416.2443420},
+ acmid = {2443420},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Hadoop, Oozie, scalability, workflow management},
+} 
+@inproceedings{HUE,
+title = {http://gethue.com/},
+}
+@inproceedings{Azkaban,
+title={https://azkaban.github.io/},}
+@Inbook{barga2014introducing,
+author="Barga, Roger
+and Fontama, Valentine
+and Tok, Wee Hyong",
+chapter="Introducing Microsoft Azure Machine Learning",
+title="Predictive Analytics with Microsoft Azure Machine Learning: Build and Deploy Actionable Solutions in Minutes",
+year="2014",
+publisher="Apress",
+address="Berkeley, CA",
+pages="21--42",
+isbn="978-1-4842-0445-0",
+doi="10.1007/978-1-4842-0445-0_2",
+url="http://dx.doi.org/10.1007/978-1-4842-0445-0_2"
+}
